# qrgen

./: .gitignore  Cargo.toml  README.md  example_command.txt  example_data.csv  example_data_markup.csv
example/: example_command.txt
example/json5_config/: from_data_draw.json5  from_data_draw_simple.json5  from_draw_base_image.json5  from_draw_full.json5  from_simple.json5  gen_draw_full.json5  gen_draw_qr_base_image.json5  gen_draw_simple.json5  gen_simple.json5
example/set_base_image/from/: data.csv
src/: main.rs
src/utils/: generate.rs  mod.rs  process_file.rs  template.rs
src__/: main.rs
src__/utils/: console.rs  generate.rs  template.rs
web/: package-lock.json  package.json
web/src/: app.js  index.html
web/src/utils/: dirDownload.js  fileType.js  readFileToUint8Array.js  runWasmWorker.js
web/static/: qrgen.wasm
