[package]
name = "qrgen"
version = "0.1.0"
edition = "2021"
authors = ["Angkarn Pukawanach <angkarn.pk@gmail.com>"]
license = "MIT"
description = "QR Code Generator Tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
imageproc = "0.24.0"
qrcode-generator = "4.1.9"
ab_glyph = "0.2.23"
csv = "1.3.0"
rayon = "1.10.0"
base64 = "0.22.0"

[profile.release]
panic = "abort"
opt-level = 'z'     # Optimize for size
lto = true
codegen-units = 1
strip = "debuginfo"
