[package]
name = "qrgen"
version = "0.1.0"
edition = "2021"
authors = ["Angkarn Pukawanach <angkarn.pk@gmail.com>"]
description = "QR Code Generator and Draws Tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
qrcode-generator = { version = "4.1.9", features = ["image"] }
csv = "1.3.1"
rayon = "1.11.0"
base64 = { version = "0.22.1", features = ["alloc"] }
rust-text-draw = { path = "../rust-text-draw" }
json5 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
